// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense list should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Expense list should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseItem
      amount={180}
      createdAt={0}
      description="Elictricity"
      id="1"
      key="1"
      note=""
    />
    <ExpenseItem
      amount={5}
      createdAt={-345600000}
      description="Lunch"
      id="2"
      key="2"
      note=""
    />
    <ExpenseItem
      amount={60}
      createdAt={345600000}
      description="Credit Card debt interest"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
